--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>WebPack App</title>
   </head>
   <body>
-    <script src="bundle.js"></script>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
